--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,8 +8,9 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding-top: 3rem;
 }
 
 .footer {
@@ -113,4 +114,23 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+
+.home ul {
+    margin: 30px;
+    /* background-color: green; */
+    display: flex;
+    justify-content: center;
+}
+
+.home ul li {
+  margin: 0 24px;
+  list-style: none;
+  font-weight: bold;
+}
+
+.imgname {
+  border-radius: 8px;
+  margin:    10px;
 }
